# cargo_project

./: .gitignore  README.md
actix-todo/src/: main.rs
crates_poc/: Cargo.toml
crates_poc/src/: archive.rs  main.rs
jupiter/: Untitled.ipynb  hello.ipynb  polars_cheat_sheet_rust.ipynb
jupiter/.ipynb_checkpoints/: hello-checkpoint.ipynb  polars_cheat_sheet_rust-checkpoint.ipynb  uuid-checkpoint.ipynb
jupyter/: POC.ipynb  polars_cheat_sheet.ipynb  polars_cheat_sheet_rust.ipynb  uuid.ipynb
jupyter/.ipynb_checkpoints/: Recommendations-checkpoint.ipynb  polars_cheat_sheet-checkpoint.ipynb  uuid-checkpoint.ipynb
module_poc/: Cargo.toml
module_poc/src/: main.rs  player.rs
module_poc/tests/: player_tests.rs
parser_nom_poc/: Cargo.toml
parser_nom_poc/src/: 1.1.नमस्ते_संसार.rs  1.hello_world.rs  10.take_while.rs  11_take_til.rs  12_take_until.rs  2.1.अक्षर.rs  2.char.rs  3.1_is_a.rs  3.is_a.rs  3.is_not.rs  4.1_is_not.rs  4.one_of.rs  5.1_one_of.rs  5.one_of.rs  6.1_none_of.rs  6.none_of.rs  7.1_tag.rs  7.tag.rs  8.tag_no_case.rs  9.take.rs
poc/: ._target
poc/src/: 0_intro.rs  10_functions.rs  11_arrays.rs  12_vectors.rs  13_slices.rs  14_touples.rs  15_1_structures.rs  15_2_struct_method_static_.rs  15_structures.rs  16_1_enum_closure.rs  16_enums.rs  17_generics.rs  18_if_statement.rs  19_match.rs  1_user_input.rs  20_pattern_match.rs  21_for_loop.rs  23_function_scope.rs  24_closure.rs  25_hof.rs  26_macros.rs  27_traits.rs  29_trait_return.rs  2_comments.rs  30_traits_vec.rs  34_ownership.rs  35.1_borrowing_function.rs  35_borrowing.rs  38_file.rs  (+25 more)
poc_actix/: Cargo.toml  Dockerfile
poc_async_rust/: Cargo.toml
poc_blockchain/: Cargo.toml
poc_cassandra/: .env  Cargo.toml  Dockerfile  cassandra-entrypoint.sh  docker-compose.yml  init-keyspace.cql  run.sh  setup.sh
poc_ds_algo/: Cargo.toml
poc_gql/: Cargo.toml
poc_gql/src/: main.rs  test.rs
poc_hello_wold/: Cargo.toml
poc_hello_world/: Cargo.toml  Dockerfile
poc_polars/: Cargo.toml
poc_polars/src/: main.rs
poc_redis_actix/: .env  Cargo.toml  Dockerfile  docker-compose.yml  post.lua  setup.sh
poc_redis_actix/src/: main.rs
poc_rust_memory/: Cargo.toml
poc_sqlite/: Cargo.toml  test.db
poc_sqlite/src/: main.rs
poc_sqlx/: ._target  Cargo.toml
poc_tokio/: Cargo.toml
poc_tonic/: Cargo.toml
(+21 files in other folders)
