[package]
name = "poc_gql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
env_logger = "0.11.1"
# juniper from latest master branch 
juniper = { git = "https://github.com/graphql-rust/juniper", features = ["uuid", "chrono"] }
juniper_actix = { git = "https://github.com/graphql-rust/juniper" }
uuid = {version = "1.7.0", features = ["v4", "serde"]}
chrono = {version = "0.4.26", default-features = false, features = ["clock", "serde"]}

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
