[package]
name = "poc_redis_actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
rustis = "0.13.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-std = "1.12.0"
env_logger = "0.10.0"
uuid = {version = "1.8.0", features = ["v4", "v8", "v7", "zerocopy", "serde"]}